Fix tx alignment

--- a/app/App/Panel/Main/Account/Balances/style/index.styl
+++ b/app/App/Panel/Main/Account/Balances/style/index.styl
@@ -16,7 +16,7 @@
     height 30px
     width 60px
     background var(--ghostC)
-    border-radius 4px
+    border-radius 6px
     cursor pointer
     z-index 4000
     display flex
@@ -69,8 +69,8 @@
   
 .signerBalance
   position relative
-  margin-left 16px
-  width calc(100% - 32px)
+  margin-left 17px
+  width calc(100% - 34px)
   opacity 1
   height 56px
   transition 0.1s ease-out all
@@ -84,7 +84,7 @@
     position absolute
     left 41px
     top 10px
-    font-size 15px
+    font-size 14px
     text-align center
     display flex
     align-items center
@@ -108,8 +108,6 @@
   .signerBalanceCurrentPriceChange
     margin-left 4px
     color var(--outerspace06)
-    // font-size 12px
-    // margin-top 1px
 
   .signerBalanceCurrentPriceChangeUp
     color var(--good)
@@ -139,7 +137,7 @@
   .signerBalanceValue
     position absolute
     right 0px
-    top 10px
+    top 9px
     font-size 18px
     text-align center
     display flex
@@ -160,14 +158,14 @@
       position relative
       top 0px
       letter-spacing 0.5px
-      color var(--outerspace08)
+      color var(--outerspace06)
 
   .signerBalanceEquivalent
     position absolute
     right 0px
     bottom 9px
     font-size 13px
-    color var(--outerspace07)
+    color var(--outerspace05)
     display flex
     align-items center
     font-family FiraCode, monospace
@@ -178,11 +176,11 @@
 .signerBalanceBase
   // border 1px solid var(--ghostA)
   // width calc(100% - px)
-  margin 2px 4px 0px 4px
+  margin 0px 3px 0px 3px
   // border-radius 8px
   background var(--ghostA)
-  padding 0px 13px 0px 12px
-  border-radius 10px
+  padding 0px 14px 0px 14px
+  border-radius 12px
   border-bottom none // 1px solid var(--ghostA)
   // box-shadow 0px 4px 5px var(--ghostA)
 
