--- a/app/App/Panel/Main/Account/Requests/style/index.styl
+++ b/app/App/Panel/Main/Account/Requests/style/index.styl
@@ -562,7 +562,7 @@
       display flex
       justify-content center
       align-items center
-      margin-top 10px
+      margin-top 6px
       transform translateZ(0px)
       letter-spacing 1px
 
@@ -571,7 +571,6 @@
     top 40px
     width 100%
     height 100%
-    border-top 1px solid var(--ghostA)
 
     .approveTransactionIcon
       width 100%
@@ -589,7 +588,7 @@
       top 0
       left 0
       right 0
-      height 60px
+      height 50px
       display flex
       justify-content center
       align-items center
@@ -726,7 +725,7 @@
 
   .transactionValue
     position absolute
-    top 57px
+    top 40px
     left 0
     right 0
     height 55px
@@ -970,14 +969,14 @@
     box-shadow 0px 2px 0px var(--thick), 0px 8px 8px -2px var(--thick), 0px 0px 10px -2px var(--thick)
 
   .transactionTo
-    height 70px
+    height 60px
     width 100%
     display flex
     justify-content center
     align-items center
     flex-direction column
     position absolute
-    bottom 60px
+    bottom 90px
     right 0
     left 0
 
@@ -1004,8 +1003,8 @@
 
         svg
           color var(--outerspace08)
-          padding-top 5px
-          padding-left 8px
+          padding-top 2px
+          padding-left 6px
           padding-right 5px
 
       .transactionToAddressFull
@@ -1032,7 +1031,6 @@
       font-weight 400
       text-transform uppercase
       font-size 13px
-      margin-top 4px
       letter-spacing 1px
 
   .unknownType
@@ -1232,7 +1230,7 @@ span
 
 .txNonce
   position absolute
-  top 20px
+  top 15px
   right 12px
   background var(--ghostE)
   height 20px
@@ -1273,7 +1271,7 @@ span
     align-items center
 
   .txNonceHidden
-    color var(--ghostC)
+    color var(--ghostX)
     opacity 0
 
   .txNonceControl
