--- a/app/App/Panel/Main/Account/Requests/style/next.styl
+++ b/app/App/Panel/Main/Account/Requests/style/next.styl
@@ -147,8 +147,8 @@
     border-radius 19px
     position absolute 
     top -2px
-    left 6px
-    right 6px
+    left 1px
+    right 1px
     box-sizing border-box
     pointer-events none
     z-index 5000000
@@ -157,10 +157,11 @@
     .customHaloMarker
       position absolute
       top 0px
-      left 72px
+      left 67px
       bottom 0px
-      right 72px
+      right 64px
       z-index 200000000
+      margin-left -3px
 
       .customHaloMarkerInner
         position absolute
@@ -176,11 +177,11 @@
         .customHaloMarkerLine
           position absolute
           top 0px
-          left 50%
+          left 0
           bottom 0px
           width 4px
-          border-radius 4px
-          margin-left -6px
+          border-radius 2px
+          // margin-left -6px
           background var(--good)
 
   .networkFeeSelectedHaloClickwrap
@@ -221,7 +222,7 @@
     position absolute
     left 0px
     right 0px
-    top 56px
+    top 72px
     padding-top 10px
     transition var(--standardVibe)
     transform translateZ(0px)
@@ -463,7 +464,7 @@
 .txFee
   background var(--ghostD)
   box-shadow cardDrop // , 0px 2px 2px var(--thin)
-  transform translateY(-162px)
+  transform translateY(-187px)
   zIndex 1
   height 31px
   left 3px
@@ -548,7 +549,7 @@
     bottom 4px
     width 186px
     margin-left -93px
-    border-radius 4px
+    border-radius 8px
     z-index 4000
     padding 4px
     box-sizing border-box
@@ -557,15 +558,17 @@
     font-size 11px
     letter-spacing 0.5px
     transition var(--standardFast)
-    background var(--ghostC)
-    box-shadow 0px 3px 3px var(--thick)
+    background var(--ghostF)
     text-align center
     text-transform uppercase
+    cursor pointer
+    *
+      pointer-events none
 
 
   .txFeeHover:hover
     top 4px
-    // opacity 1
+    opacity 1
 
   .txFeeTitle
     position absolute
@@ -584,7 +587,7 @@
 
   .txFeeInputs
     position absolute
-    top 7px
+    top 11px
     right 7px
     left 7px
     height 48px
@@ -628,8 +631,8 @@
     height 48px
     // transform translateY(1000px)
     opacity 1
-    border-radius 11px
-    border 1px solid var(--thick)
+    border-radius 6px
+    border 1px solid var(--ghostB)
 
     .txFeeSummaryValue
       font-size 20px
@@ -728,8 +731,7 @@
     font-size 22px
     font-weight 400
     background var(--ghostE)
-    border-radius 11px
-
+    border-radius 6px
     height 32px
     box-shadow 0px 2px 2px var(--thin), cardDrop
     display flex
@@ -743,7 +745,7 @@
       background transparent
       outline 0
       border 0
-      border-radius 12px
+      border-radius 6px
       height 24px
       padding 4px 4px 7px 4px
       width 100%
@@ -758,7 +760,7 @@
     font-weight 400
     letter-spacing 1px
     margin-left 1px
-    margin-top 3px
+    margin-top 8px
 
   .networkFeeLabel
     position absolute
@@ -783,14 +785,10 @@
     text-transform uppercase
 
 .txFeeExpanded
-  transform translateY(-3px)
-  height 214px
-  left 0px
-  right 0px
-  padding 110px 10px 0px 10px
+  transform translateY(-32px)
+  height 349px
   z-index 20000
-  border-radius 15px
-  box-shadow cardDrop, 0px 0px 4px 2px var(--thick)
+  border-radius 8px
 
   .customGasPriceBar
     transform translate(0px, 0px)
@@ -805,8 +803,8 @@
     // box-shadow 0px 10px 5px -5px var(--thick), 0px 0px 10px 0px var(--thick)  // , 0px -25px 20px -15px var(--thick)
 
   .networkFeeOptions
-    left 10px
-    right 10px
+    left 0px
+    right 0px
 
 .customGasPriceBar
   position absolute
